--- a/OrangeBox/pages/OrangeMain.module.css
+++ b/OrangeBox/pages/OrangeMain.module.css
@@ -287,7 +287,8 @@
 {
     margin: 0 auto;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     width: 100%;
     height: auto;
 }
@@ -296,13 +297,11 @@
 {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    width: 50%;
     height: 325px;
     margin-bottom: 10px;
     padding-top: 20px;
     padding-bottom: 20px;
-    border-bottom: 1px dashed #000000;
-    border-top: 1px dashed #000;
     background-color: #f7f7f7;
 }
 
