--- a/OrangeBox/pages/OrangeMain.module.css
+++ b/OrangeBox/pages/OrangeMain.module.css
@@ -3,10 +3,10 @@
 
 
 .orange_main
-{
+{   
     min-width: 1400px;
     width: 100%;
-    height: 5000px;
+    height: auto;
     box-sizing: border-box;
     padding-top: 115px;
 }
@@ -263,6 +263,7 @@
     margin: 0 auto;
     width: 1400px;
     height: auto;
+    border-radius: 3px;
     box-sizing: border-box;
     padding: 50px;
     background-color: #ffffff;
@@ -402,6 +403,174 @@
     color:  #000;
 }
 
+.scheduled_wrap > .scheduled_more_btn
+{
+    margin: 0 auto;
+    width: 80%;
+    height: 50px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    border:none;
+}
+.orange_main > .net_movie_ad
+{
+    margin: 0 auto;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    width: 1400px;
+    height: 400px;
+    border-radius: 3px;
+    box-sizing: border-box;
+    padding: 50px;
+    cursor: pointer;
+    font-family: 'NanumBarunGothic';
+    background-image: url(../img/ad1.jpg);
+    background-repeat: no-repeat;
+}
+
+.orange_main > .mid_menu_wrap
+{
+    margin: 0 auto;
+    margin-bottom: 25px;
+    width: 1400px;
+    height: 175px;
+}
+
+.mid_menu_wrap > .mid_menu_list
+{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+}
+
+.mid_menu_list > li
+{
+    width: 15%;
+    height: 100%;
+    background-color:#ffffff;
+    box-sizing: border-box;
+    padding: 20px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.mid_menu_list > li:hover
+{
+    background-color: #f7f7f7;
+}
+
+.mid_menu_list > li > img
+{
+    display: block;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+}
+
+.mid_menu_list > li > span
+{
+    margin-top: 20px;
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+
+.orange_main > .notice_warp
+{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 1400px;
+    height: 250px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    padding: 20px;
+    background-color: rgb(255, 255, 255);
+}
+
+.notice_warp > .notice_title
+{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    font-size: 18px;
+    box-sizing: border-box;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #020202;
+}
+
+.notice_title > p
+{
+    width: auto;
+    height: auto;
+}
+
+.notice_title > p:nth-child(2)
+{
+    font-size: 15px;
+}
+
+.notice_warp  > .notice_list
+{
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+}
+
+.notice_list > li
+{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
+    padding: 10px;
+    border-bottom: 1px solid #c9c9c9;
+    cursor: pointer;
+}
+
+.notice_list > li:hover
+{
+    background-color: #ebebeb;
+}
+
+.notice_list > li > span
+{
+    width: auto;
+}
+
+.orange_main > .bottom_ad
+{
+    margin: 0 auto;
+    margin-top: 175px;
+    width: 100%;
+    height: 225px;
+    background-color: rgb(128, 204, 255);
+}
+
+.bottom_ad > .bottom_ad_in
+{
+    position: relative;
+    margin: 0 auto;
+    width: 1400px;
+    height: 100%;
+}
+
+.bottom_ad_in > img
+{
+    position: absolute;
+    bottom: 0px;
+    left:0px;
+    width: auto;
+    height: auto;
+}
 
 
 /*모바일 네비*/
