--- a/OrangeBox/parts/Footer.module.css
+++ b/OrangeBox/parts/Footer.module.css
@@ -1,5 +1,117 @@
 @charset "utf-8";
 
+.footer
+{
+    margin: 0 auto;
+    margin-top: 100px;
+    width: 100%;
+    height: auto;
+    background-color: rgb(0, 0, 0);
+    box-sizing: border-box;
+}
+
+.footer > .footer_inner
+{
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    width: 1400px;
+    height: 100%;
+    box-sizing: border-box;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.footer_inner > .footer_logo
+{
+    width: 100%;
+    height: 30px;
+}
+
+.footer_logo > img
+{
+    width: auto;
+    height: 100%;
+}
+
+.footer_inner > .footer_menu
+{
+    margin-top: 30px;
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+
+.footer_menu > li
+{
+    width: auto;
+    box-sizing: border-box;
+    padding-left:10px;
+    padding-right: 10px;
+    border-right: 1px solid #fff;
+}
+
+.footer_menu > li:first-child
+{
+    padding-left: 0px;
+}
+
+.footer_menu > li:last-child
+{
+    border-right: 0px;
+}
+.footer_menu > li > a
+{
+    display: block;
+    width: 100%;
+    height: 100%;
+    color:  #c5c5c5;
+    text-align: center;
+    font-size: 14px;
+}
+
+.footer_inner > .footer_address
+{
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+    display: flex;
+    width: 100%;
+    height: auto;
+}
+
+.footer_address > li
+{
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: flex-start;
+    width: auto;
+    height: auto;
+}
+
+.footer_address > li > p
+{
+    width: auto;
+    height: auto;
+    color:  #c5c5c5;
+    font-size: 14px;
+    box-sizing: border-box;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-right: 1px solid #fff;
+}
+
+.footer_address > li > p:first-child
+{
+    padding-left: 0px;
+}
+
+.footer_address > li > p:last-child
+{
+    border-right: none;
+}
+
+
+
 
 
 /*모바일 네비*/
