--- a/OrangeBox/parts/Header.module.css
+++ b/OrangeBox/parts/Header.module.css
@@ -117,6 +117,7 @@
 
 .header_inner > .header_nav
 {
+    position: relative;
     width: 100%;
     height: 44px;
 }
@@ -126,17 +127,20 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    width: 50%;
+    width: 80%;
     height: 100%;
+
 }
 
 .nav_list > li
 {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: auto;
     height: 100%;
+    box-sizing: border-box;
 }
 
 .nav_list > li > a
@@ -148,7 +152,7 @@
     height: auto;
     color:  #fff;
     box-sizing: border-box;
-    padding: 0px 20px 0px 20px;
+    padding: 0px 50px 0px 50px;
     text-align: center;
     border-right: 1px solid rgb(255, 255, 255);
 }
@@ -158,6 +162,38 @@
     border-right: none;
 }
 
+.nav_hover_menu
+{
+    display: none;
+    position: absolute;
+    top:44px;
+    left:0px;
+    width: 100%;
+    height: auto;
+}
+
+.nav_hover_menu > li
+{
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
+    padding: 10px;
+    background-color: #191919;
+}
+
+.nav_hover_menu > li > a
+{
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #fff;
+}
+
+.nav_hover_menu > li:hover
+{
+    background-color: #414141;
+}
 
 
 /*모바일 네비*/
