--- a/OrangeBox/pages/OrangeMain.module.css
+++ b/OrangeBox/pages/OrangeMain.module.css
@@ -298,6 +298,7 @@
 {
     display: flex;
     flex-wrap: wrap;
+    justify-content: flex-start;
     width: 50%;
     height: 325px;
     margin-bottom: 10px;
