--- a/Main/pages/PortfolioPage.module.css
+++ b/Main/pages/PortfolioPage.module.css
@@ -86,6 +86,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    border-radius: 5px;
 }
 
 .portfolio_img_box > a > img
@@ -101,7 +102,7 @@
 
 .portfolio_img_box > a:hover > img
 {
-    height: 110%;
+    height: 105%;
 }
 .portfolio_list > li > .portfolio_info
 {
@@ -166,7 +167,7 @@
     margin-bottom: 10px;
     width: 100px;
     height:25px;
-    background-color: rgb(89, 136, 155);
+    background-color: rgb(78, 85, 88,0.5);
     text-align: center;
     box-sizing: border-box;
     border-radius: 5px;
