--- a/NG/pages/NgHome.module.css
+++ b/NG/pages/NgHome.module.css
@@ -15,8 +15,7 @@
     margin: 0 auto;
     position: relative;
     width: 100%;
-    height: 50vw;
-    max-height: 800px;
+    height: 42vw;
 }
 
 .intro_area > .intro_slide
@@ -169,7 +168,7 @@
 {
     margin-top: 3%;
     width: 100%;
-    height: 700px;
+    height: 32vw;
     border-radius: 5px;
     overflow: hidden;
     position: relative;
@@ -196,8 +195,8 @@
     transform: translate(-50%,-50%);
     display: block;
     margin: 0 auto;
-    width: 1920px;
-    height: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .news_summary > .news_head_title
@@ -285,7 +284,7 @@
     height: auto;
     background-color: rgb(236, 236, 236);
     box-sizing: border-box;
-    padding: 100px 0px 100px 0px;
+    padding: 5% 9.5% 5% 9.5%;
 }
 
 
@@ -295,12 +294,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 1200px;
+    width: 100%;
     height: 100%;
 }
 
 .magazine_inner > .magazine_area_title
 {
+    margin-bottom: 20px;
     display: block;
     width: 100%;
     height: auto;
@@ -315,7 +315,7 @@
 .magazine_inner > .magazine_list
 {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-wrap: wrap;
     width: 100%;
     height: 90%;
@@ -324,7 +324,6 @@
 .magazine_list > li
 {
     margin: 0 auto;
-    margin: 20px 0px 20px 0px;
     display: block;
     width: 375px;
     height: 560px;
@@ -470,10 +469,7 @@
 
 @media (min-width: 1920px)
 {
-    .home_section
-    {
-        width: 1920px;
-    }
+
 }
 
 /*테블릿*/
